# prometheus-ntp-exporter

./: README.md  pyproject.toml  setup.py
prometheus_ntp_exporter/: __init__.py  exporter.py  main.py
